# skill-manager-treeshell

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: nav_config.json  system_agent_config.json  system_base_config.json  system_user_shortcuts.json
configs/families/: system_hud_family.json
mcp_server/: agent_server.py  user_server.py
skill_manager_treeshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skillmanager_treeshell/: __init__.py
skillmanager_treeshell/configs/: dev_base_shortcuts.json  system_base_shortcuts.json
skillmanager_treeshell/mcp_server/: agent_server.py  user_server.py
