[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager-treeshell"
version = "0.1.4"
description = "Skill Manager TreeShell MCP - Three-tier skill architecture for compound intelligence"
readme = "README.md"
license = "LicenseRef-GPBL-1.0"
license-files = ["LICENSE"]
authors = [{name = "Isaac Wright", email = "sancovp@gmail.com"}]
keywords = ["mcp", "treeshell", "skills", "claude", "ai", "compound-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "heaven-tree-repl>=0.1.0",
    "skill-manager-mcp>=0.1.2",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/sancovp/skill-manager-treeshell"
Repository = "https://github.com/sancovp/skill-manager-treeshell"
Issues = "https://github.com/sancovp/skill-manager-treeshell/issues"

[project.scripts]
skill-manager-treeshell = "mcp_server.user_server:serve"

[tool.setuptools.packages.find]
include = ["skillmanager_treeshell*", "mcp_server*", "configs*", "families*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
